styles.css
/* .montserrat-<uniquifier> {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
} */

body {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    background-color: rgb(8, 13, 32);
}

/* HEADER */

header{
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    width: 100%;
    height: 80px;
    position: sticky;
    top: 0;
    z-index: 1000;
}
header .container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 1440px;
    padding: 0 20px;
}
a{
    text-decoration: none;
    color: white;
    font-weight: 600;
}
ul{
    display: flex;
    gap: 20px;
    padding: 0;
    list-style: none;
}

/* HERO */

.hero{
    display: flex;
    justify-content: center;
    height: 100vh;
    width: 100%;
    margin-top: -80px;
    background-color: rgb(8, 13, 32);
}
.hero .container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 1440px;
    color: white;
    padding: 0 20px;
    position: relative;
}
.content{
    display: flex;
    gap: 50px;
}
.text{
    display: flex;
    flex-direction: column;
    width: 70%;
}
.button-container{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;
    margin-bottom: 16px;
    width: 30%;
}
.button-container p{
    font-size: 12px;
    /* font-weight: 600; */
    margin-bottom: 16px;
}
button{
    background-color: rgb(121, 154, 39);
    color: white;
    border: none;
    padding: 16px 50px;
    font-size: 16px;
    font-weight: 600;
    text-transform: uppercase;
    cursor: pointer;
    border-radius: 5px;
    width: 100%;
}
h1{
    font-size: 60px;
    line-height: 56px;
    font-weight: 700;
}
.hero h1 span{
    color: rgb(121, 154, 39);
}
.divider-container{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    
}
.divider{
    display: flex;
    justify-content: center;
    width: auto;
    position: absolute;
    bottom: 0;
}
.divider p{
    font-size: 200px;
    font-weight: 800;
    letter-spacing: 30px;
    margin: 0 0 -45px 0;
}

/* ABOUT */

.about .divider{
    top: 0;
    height: 200px;
}
.about .divider p{
    margin: -50px 0 0 0;
}
.about{
    display: flex;
    /* flex-direction: column; */
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100%;
    background-color: white;
    border-radius: 10px 10px 0 0;
}
.about .container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 1440px;
    height: 100%;
    padding: 0 20px;
    position: relative;
}

/* FOOTER */

footer{
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    width: 100%;
}
footer .container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 1440px;
    padding: 0 20px;
}

